resource-definitions/productpage/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: productpage-ingress
spec:
  rules:
  - host: bookinfo.tools.azure.nvcodes.net
    http:
      paths:
      - path: /
        backend:
          serviceName: productpage
          servicePort: 9080
